# canbusnoop

./: Cargo.toml  Dioxus.toml  README.md  package-lock.json  package.json  tailwind.config.js
crates/bus/: Cargo.toml
crates/bus/src/: demo.rs  lib.rs  socket_can.rs
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/db/: Cargo.toml
crates/db/src/: lib.rs
crates/interface/: Cargo.toml
crates/interface/src/: lib.rs
crates/ui/: Cargo.toml
crates/ui/src/: lib.rs  main.rs  stats.rs  stats_item.rs  widgets.rs
src/: main.rs
tools/: tailwind-watch
