[package]
name = "canbusnoop"
version = "0.1.0"
authors = ["Alessandro Pezzato <alessandro@pezzato.net>"]
edition = "2021"
description = "CAN bus sniffer"
homepage = "https://github.com/alepez/canbusnoop"
repository = "https://github.com/alepez/canbusnoop"
readme = "README.md"
license = "MIT/Apache-2.0"
keywords = ["can", "socketcan", "sniffer"]
rust-version = "1.74.0"

[[bin]]
bench = false
path = "crates/cli/src/main.rs"
name = "canbusnoop"

[workspace]
members = [
  "crates/bus",
  "crates/core",
  "crates/db",
  "crates/ui",
]

[dependencies]
futures-util = "0.3"
tokio-socketcan = "0.3"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1" }
tokio-util = { version = "0.7", features = ["codec"] }
log = "0.4"
env_logger = "0.10"
canbusnoop-bus = { path = "crates/bus" }
canbusnoop-core = { path = "crates/core" }
canbusnoop-db = { path = "crates/db" }
canbusnoop-ui = { path = "crates/ui" }
futures-channel = "0.3.29"
clap = { version = "4.4.11", features = ["derive"] }
