[package]
name = "canbusnoop-bus"
version = "0.1.0"
authors = ["Alessandro Pezzato <alessandro@pezzato.net>"]
edition = "2021"
description = "CAN bus sniffer - bus connection library"
homepage = "https://github.com/alepez/canbusnoop"
repository = "https://github.com/alepez/canbusnoop"
license = "MIT/Apache-2.0"
keywords = ["can", "socketcan", "sniffer"]

[dependencies]
futures-util = "0.3"
tokio-socketcan = "0.3"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1" }
tokio-util = { version = "0.7", features = ["codec"] }
log = "0.4"
anyhow = "1"
thiserror = "1"
canbusnoop-core = { path = "../core" }