[package]
name = "canbusnoop-db"
version = "0.1.0"
authors = ["Alessandro Pezzato <alessandro@pezzato.net>"]
edition = "2021"
description = "CAN bus sniffer - database"
homepage = "https://github.com/alepez/canbusnoop"
repository = "https://github.com/alepez/canbusnoop"
license = "MIT/Apache-2.0"
keywords = ["can", "socketcan", "sniffer"]

[dependencies]
log = "0.4"
canbusnoop-core = { path = "../core" }