[package]
name = "canbusnoop-ui"
version = "0.1.0"
authors = ["Alessandro Pezzato <alessandro@pezzato.net>"]
edition = "2021"
description = "CAN bus sniffer"
homepage = "https://github.com/alepez/canbusnoop"
repository = "https://github.com/alepez/canbusnoop"
license = "MIT/Apache-2.0"
keywords = ["can", "socketcan", "sniffer"]
rust-version = "1.74.0"

[dependencies]
futures-util = "0.3"
tokio-socketcan = "0.3"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1" }
tokio-util = { version = "0.7", features = ["codec"] }
log = "0.4"
env_logger = "0.10"
canbusnoop-bus = { path = "../bus" }
canbusnoop-core = { path = "../core" }
canbusnoop-db = { path = "../db" }
dioxus = "0.4.3"
dioxus-tui = "0.4.3"
